Updated score header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
                       </div>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                     <h1 class="point" id="guest-point">0</h1>
                 <div class="point-container">
                          <button class="btn" onclick="guestScoreAdd(1)">+1</button>
